--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,14 +39,13 @@ jobs:
 
       - name: 📦 Install Dependencies
         run: |
-          python -m venv venv
-          source venv/bin/activate
           pip install --upgrade pip
           pip install -r requirements.txt
+          echo "Run your tests here"
 
       - name: 🧪 Run Tests (Skip for now or use pytest)
         run: |
-          echo "Skipping tests for now"
+          echo "No tests yet - skipping"
 
       - name: 🐳 Docker Compose Build & Up
         run: |
